test/stage1_params/param_undef_var.c
// @expected-error E1010 not_declared at line 3
int main() {
    return not_declared + 1;
}